# otori

./: .gitignore  Cargo.toml  README.md  index.html  index.js  poem.txt
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/src/emulators/: chip8.rs  gameboy.rs
gameboy_core/src/: cpu.rs  instructions.rs  lib.rs  ram.rs  registers.rs
nintendo_entertainment_system_core/: Cargo.toml
src/: level.rs  main.rs  player.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.js  wasm.js  wasm_bg.wasm
