[workspace]
members = [
    "chip8_core",
    "nintendo_entertainment_system_core",
    "desktop",
]
resolver = "3"

[workspace.dependencies]
rand = "0.9.1"
sdl2 = { version = "0.37", features = ["ttf"] }
nintendo_entertainment_system_core = { path = "nintendo_entertainment_system_core"}
chip8_core = { path = "chip8_core" }