[workspace]
members = [
    "chip8_core",
    "desktop",
    "wasm",
]
resolver = "3"

[workspace.dependencies]
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window"] }
js-sys = "0.3.77"
rand = { version = "0.7.1", features = ["wasm-bindgen"] }
sdl2 = { version = "0.37", features = ["ttf"] }
chip8_core = { path = "chip8_core" }
wasm-bindgen = "0.2.100"